@@ -77,6 +77,7 @@ Tools
 -----
 tools/asc2kml/asc2kml.cpp
 tools/palettegen/palettegen.cpp
+tools/texissor/texissor.cpp
 
 
 DOING
@@ -86,7 +87,6 @@ DOING
 TODO
 ====
 
-tools/texissor/texissor.cpp
 tools/svg2pnt/svgxmlhandler.cpp
 tools/svg2pnt/svg2pnt.cpp
 tools/svg2pnt/svgxmlhandler.h
